--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,13 @@
   "name": "myVisualizer",
   "version": "0.0.0",
   "dependencies": {
+    "classnames": "^2.1.2",
     "d3": "^3.5.5",
+    "material-ui": "^0.8.0",
     "react-bootstrap": "^0.22.5",
+    "react-draggable2": "^0.5.1",
     "react-router": "^0.13.3",
+    "react-tap-event-plugin": "^0.1.7",
     "reflux": "^0.2.7",
     "topojson": "^1.6.19",
     "underscore": "^1.8.3"
