--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "classnames": "^2.1.2",
     "d3": "^3.5.5",
+    "del": "^1.2.0",
     "gulp": "^3.9.0",
     "material-ui": "^0.8.0",
     "react-bootstrap": "^0.22.5",
