--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "browser-sync": "latest",
+    "browserify-shim": "^3.8.0",
     "del": "~0.1.3",
-    "gulp": "~3.8.8",
+    "gulp": "^3.9.0",
     "gulp-autoprefixer": "~1.0.1",
     "gulp-bower": "0.0.6",
     "gulp-cache": "~0.2.4",
@@ -26,22 +28,20 @@
     "gulp-jshint": "~1.8.5",
     "gulp-load-plugins": "~0.7.0",
     "gulp-ruby-sass": "~0.7.1",
-    "browser-sync": "latest",
     "gulp-size": "~1.1.0",
+    "gulp-strip-debug": "^1.0.2",
+    "gulp-uglify": "^1.0.2",
     "gulp-useref": "~0.4.4",
     "gulp-util": "~3.0.1",
     "gulp-webserver": "latest",
     "jest-cli": "latest",
+    "main-bower-files": "~2.6.2",
     "react": "latest",
     "react-tools": "latest",
     "reactify": "latest",
-    "watchify": "~2.1",
-    "browserify-shim": "^3.8.0",
-    "gulp-uglify": "^1.0.2",
     "strip-debug": "^1.0.1",
-    "gulp-strip-debug": "^1.0.2",
     "vinyl-source-stream": "^1.0.0",
-    "main-bower-files": "~2.6.2"
+    "watchify": "~2.1"
   },
   "engines": {
     "node": ">=0.10.0"
